# openCL-project

./: CMakeLists.txt  cookbook_test.cpp  cookbook_test02.cpp  kernel_test.cl  main.cpp  main_test.cpp  new_test.txt  simulation_01.cpp  simulation_01_kernel.cl  test_kernel.cl
